# SimplerKokoro

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
Simpler_Kokoro/: __init__.py  __main__.py  simpler_kokoro.py
docs/: CONTRIBUTING.md  SECURITY.md
examples/: basic_example.py  custom_models_dir_example.py  custom_speed_example.py  subtitles_example.py
tests/: test.py  test_simpler_kokoro.py
