[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Simpler_Kokoro_WilleIshere"
version = "0.0.1"
authors = [
  { name="WilleIshere" },
]
description = "A package to make kokoro simpler to work with"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/WilleIshere/SimplerKokoro"
Issues = "https://github.com/WilleIshere/SimplerKokoro/issues"